# quay

./: .air.toml  .coderabbit.yaml  .coveragerc  .dockerignore  .env  .flake8  .git-blame-ignore-revs  .gitignore  .gitlint  .gitmodules  .golangci.yml  .mcp.json  .pre-commit-config.yaml  .style.yapf  .travis.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.mdn  CLAUDE.md  COMPLETE_ENDPOINT_TEST_REFERENCE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.centos7.osbs  Dockerfile.cirun  Dockerfile.deploy  Dockerfile.dev  Dockerfile.downstream  Dockerfile.mirror  Dockerfile.mirror.dockerignore  Dockerfile.osbs  Dockerfile.rhel7  Dockerfile.rhel8  Dockerfile.static  Dockerfile.ubi8  GEMINI.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.ci  (+88 more)
.ambient/: ambient.json
.chglog/: CHANGELOG.tpl.md  config.yml
.claude/: settings.json  user-map.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  labeler.yml
.old/: schema.go
.tekton/: _quay-image-build.yaml  konflux-quay-test-pull-request.yaml  konflux-quay-test-push.yaml  playwright-e2e-pull-request.yaml  playwright-e2e-push.yaml  quay-b09b0-pull-request.yaml  quay-b09b0-push.yaml  quay-hermetic-pull-request.yaml  quay-hermetic-push.yaml  quay-master-pull-request.yaml  quay-master-push.yaml  quay-pull-request.yaml  quay-push.yaml  quay-py3-pull-request.yaml  quay-py3-push.yaml  quay-test-pull-request.yaml  quay-test-push.yaml  quay-v3-10-5-pull-request.yaml  quay-v3-10-5-push.yaml  quay-v3-10-pull-request.yaml  quay-v3-10-push.yaml  quay-v3-11-pull-request.yaml  quay-v3-11-push.yaml  quay-v3-12-pull-request.yaml  quay-v3-12-push.yaml  quay-v3-13-pull-request.yaml  quay-v3-13-push.yaml  quay-v3-14-pull-request.yaml  quay-v3-14-push.yaml  quay-v3-9-pull-request.yaml  quay-v3-9-push.yaml  quayio-frontend-pull-request.yaml  quayio-frontend-push.yaml
agent_docs/: api.md  architecture.md  database.md  database_rollback_sop.md  development.md  e2e-coverage.md  gc.md  global_readonly_superuser.md  go.md  go_security.md  installer.md  oidc_superuser_sync.md  quay-api-tests-porting-plan.md  secscan.md  testing.md  web-unit-test-roadmap.md  workflow.md
artifacts/: __init__.py  plugin.py  plugins.py  plugins.ts  plugins.tsx  plugins_base.py
auth/: __init__.py  auth_context.py  auth_context_type.py  basic.py  bootstrap.py  context_entity.py  cookie.py  credential_consts.py  credentials.py  decorators.py  log.py  oauth.py  permissions.py  registry_jwt_auth.py  scopes.py  signedgrant.py  validateresult.py
avatars/: avatars.py
buildman/: MAINTAINERS  README.md  asyncutil.py  build_token.py  builder.py  buildmanagerservicer.py  container_cloud_config.py  enums.py  interface.py  orchestrator.py  server.py  test_build_token.py  test_orchestrator.py
buildtrigger/: __init__.py  basehandler.py  bitbuckethandler.py  customhandler.py  githubhandler.py  gitlabhandler.py  triggerutil.py
cmd/: root.go  validate.go
commands/: editor.go  print.go  root.go  validate.go
conf/: containers-policy-strict.json  gunicorn_healthy.py  gunicorn_local.py  gunicorn_registry.py  gunicorn_secscan.py  gunicorn_verbs.py  gunicorn_web.py  jwtproxy_conf.yaml.jnj  logging.conf  supervisord.conf.jnj
config-tool/: .air.telepresence.toml  .air.toml  .dockerignore  .env  AGENTS.md  Dockerfile  Dockerfile.dev  Makefile  README.md  go.mod  go.sum  main.go
config_app/: Procfile  README.md  _init_config.py  c_app.py  config_application.py  config_web.py  webpack.config.js
data/: archivedlogs.py  billing.py  buildlogs.py  database.py  decorators.py  encryption.py  estimate.py  fields.py  marketplace.py  migrationutil.py  pullmetrics.py  queue.py  readreplica.py  runmigration.py  seed_data.py  text.py  userevent.py  userfiles.py
deploy/: README.md
digest/: checksums.py  digest_tools.py
docs/: aes-gcm-migration-plan.md  crypto-usage-report.md  development-container.md  docker-local-dev.md  docs.go  getting-started.md  getting_started.md  mirror-health-test-podman.md  mirroring-metrics.md  openshift-authentication.md  prometheus.md  pull-statistics-ui-changes.md  pull-statistics.md  quick-local-deployment.md  swagger.json  swagger.yaml  talks.md
emails/: base.html  changeemail.html  combinedrecovery.html  confirmemail.html  email-template-viewer.html  emailchanged.html  logsexported.html  orgrecovery.html  passwordchanged.html  paymentfailure.html  recovery.html  repoauthorizeemail.html  teaminvite.html
endpoints/: __init__.py  bitbuckettrigger.py  building.py  cli_auth.py  common.py  common_models_interface.py  common_models_pre_oci.py  csrf.py  decorated.py  decorators.py  exception.py  githubtrigger.py  gitlabtrigger.py  healthy.py  metrics.py  realtime.py  secscan.py  web.py  webhooks.py  wellknown.py
events/: build_cancelled.html  build_event.html  build_failure.html  build_queued.html  build_start.html  build_success.html  quota_error.html  quota_warning.html  repo_image_expiry.html  repo_mirror_sync_failed.html  repo_push.html  vulnerability_found.html
features/: __init__.py  __init__.pyi
go-secscan/: go.mod  go.sum
grafana/: README.md
hack/: generate-rpms.sh  prepopulate_quay.py  update-requirements-build.sh  update-requirements-build.txt  verify-requirements.sh
health/: healthcheck.py  models_interface.py  models_pre_oci.py  processes.py  services.py  storage_engines.py
image/: common.py
integration_tests/: README.md  package.json  protractor.conf.ts  tsconfig.json
ldappool/: __init__.py
local-dev/: Dockerfile  config.yaml  gunicorn_registry.py  gunicorn_secscan.py  gunicorn_web.py  gunicorn_worker.py  logging_debug.conf  logging_debug_json.conf  logging_json.conf  supervisord.conf.jnj
mcp/: mcp_server.py
mirror-worker-init/: mirror-worker-init.py
mypy_stubs/: README.md  peewee.pyi
notification-router/: CLAUDE.md
notifications/: __init__.py  models_interface.py  notificationevent.py  notificationmethod.py
pulp/: rpm.py  (+2 more)
rehash-openssl/: Cargo.toml  pyproject.toml
rehash-openssl/src/: lib.rs
rust-builddeps/: Cargo.toml
(+4411 files in other folders)
