[project]
name = "quay"
version = "3.13"
requires-python = ">=3.12"
dependencies = [
    "akamai-edgeauth==0.3.2",
    "alembic==1.13.1",
    "aniso8601 @ git+https://github.com/DevTable/aniso8601-fake.git@bd7762c7dea0498706d3f57db60cd8a8af44ba90",
    "apscheduler==3.10.4",
    "attrs==19.3.0",
    "authlib==1.6.5",
    "aws-sam-translator==1.20.1",
    "azure-core==1.24.0",
    "azure-storage-blob==12.4.0",
    "babel==2.13.0",
    "bcrypt==3.1.7",
    "beautifulsoup4==4.11.1",
    "bintrees==2.2.0",
    "bitmath==1.3.3.1",
    "blinker==1.6.2",
    "boto3==1.28.61",
    "botocore==1.31.61",
    "cachetools==5.3.3",
    "certifi==2024.7.4",
    "chardet==5.2.0",
    "charset-normalizer==2.0.12",
    "click==8.1.7",
    "cryptography==44.0.1",
    "datetime==4.3",
    "debtcollector==1.22.0",
    "decorator==5.1.1",
    "deprecated==1.2.14",
    "dumb-init==1.2.5.post1",
    "elasticsearch==7.6.0",
    "elasticsearch-dsl==7.0.0",
    "flask==2.3.2",
    "flask-login==0.6.3",
    "flask-mail==0.9.1",
    "flask-principal==0.4.0",
    "flask-restful==0.3.10",
    "geoip2==3.0.0",
    "gevent==24.11.1",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.1.1",
    "grpcio==1.67.0",
    "gunicorn==23.0.0",
    "hashids==1.3.1",
    "importlib-metadata==6.7.0",
    "iso8601==0.1.12",
    "isodate==0.6.1",
    "itsdangerous==2.1.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jsonpath-rw==1.4.0",
    "jsonpointer==2.4",
    "jsonschema==3.2.0",
    "kafka-python==2.2.10",
    "keystoneauth1==3.18.0",
    "mako==1.2.4",
    "markupsafe==2.1.3",
    "maxminddb==2.6.2",
    "mixpanel==4.5.0",
    "msgpack==0.6.2",
    "msrest==0.7.1",
    "netaddr==1.3.0",
    "netifaces==0.11.0",
    "oauthlib==3.2.2",
    "orderedmultidict==1.0.1",
    "opentelemetry-api==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-proto==1.32.1",
    "opentelemetry-exporter-otlp-proto-common==1.32.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.32.1",
    "opentelemetry-exporter-otlp-proto-http==1.32.1",
    "opentelemetry-instrumentation-flask==0.53b1",
    "opentelemetry-instrumentation-psycopg2==0.53b1",
    "opentelemetry-instrumentation-dbapi==0.53b1",
    "opentelemetry-instrumentation-wsgi==0.53b1",
    "opentelemetry-instrumentation==0.53b1",
    "opentelemetry-util-http==0.53b1",
    "opentelemetry-semantic-conventions==0.53b1",
    "os-service-types==1.7.0",
    "peewee==3.13.1",
    "pillow==10.3.0",
    "ply==3.11",
    "prometheus-client==0.7.1",
    "protobuf==5.29.5",
    "psutil==5.9.0",
    "psycopg2==2.9.9",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.3.0",
    "py-bitbucket @ git+https://github.com/quay/py-bitbucket.git@3ba167408d92eb4ba2cae78c0047b8f1e8821c67",
    "pygithub==2.1.1",
    "pyjwt==2.8.0",
    "pymemcache==3.0.0",
    "pymysql==1.1.1",
    "pyopenssl==25.1.0",
    "pyparsing==2.4.6",
    "pyrsistent==0.18.0",
    "python-dateutil==2.8.1",
    "python-editor==1.0.4",
    "python-gitlab==2.0.0",
    "python-keystoneclient==3.22.0",
    "python-ldap==3.4.3",
    "python-magic==0.4.27",
    "python-redis-lock==3.7.0",
    "python-swiftclient==4.4.0",
    "pytz==2019.3",
    "pyyaml==6.0.2",
    "sentry-sdk[flask]==1.40.0",
    "recaptcha2==0.1",
    "redis==3.5.3",
    "redis-py-cluster==2.1.3",
    "rehash==1.0.1",
    "requests==2.32.3",
    "requests-aws4auth==1.2.3",
    "requests-file==1.5.1",
    "requests-oauthlib==1.3.1",
    "rfc3986==1.3.2",
    "s3transfer==0.7.0",
    "semantic-version==2.10.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "splunk-sdk==2.1.0",
    "sqlalchemy==1.4.49",
    "stevedore==5.1.0",
    "stringscore==0.1.0",
    "stripe==5.5.0",
    "supervisor==4.2.5",
    "supervisor-logging==0.0.9",
    "supervisor-stdout @ git+https://github.com/quay/supervisor-stdout.git@9bdf630d0d1b4a16cf8b60b96adafb1ed98e7380",
    "text-unidecode==1.3",
    "tldextract==2.2.2",
    "toposort==1.10",
    "tzlocal==5.0.1",
    "ua-parser==0.18.0",
    "urllib3==1.26.19",
    "webencodings==0.5.1",
    "webob==1.8.8",
    "websocket-client==1.7.0",
    "werkzeug==3.0.6",
    "xhtml2pdf>=0.2.16",
    "resumablesha256==1.0",
    "deprecation==2.1.0",
    "setuptools==78.1.1",
    "wheel==0.38.4",
    "pynacl==1.5.0",
    "pypdf3==1.0.6",
    "arabic-reshaper==3.0.0",
    "cffi==1.17.1",
    "cssselect2==0.7.0",
    "furl==2.1.4",
    "html5lib==1.1",
    "idna==3.7",
    "lxml==4.9.3",
    "oslo-config==7.0.0",
    "oslo-i18n==6.2.0",
    "oslo-serialization==5.4.0",
    "oslo-utils==6.2.1",
    "packaging==23.2",
    "pbr==5.11.1",
    "pycparser==2.21",
    "python-bidi==0.4.2",
    "reportlab>=4.0.4",
    "svglib==1.5.1",
    "tinycss2==1.2.1",
    "tqdm==4.66.4",
    "typing-extensions==4.9.0",
    "tzdata==2023.3",
    "wrapt==1.17.2",
    "zipp==3.19.2",
    "zope-event==5.0",
    "zope-interface==5.4.0",
]

[dependency-groups]
dev = [
    "bencode-py==4.0.0",
    "mockldap @ git+https://github.com/quay/mockldap.git@136253ca136fc7898944a4b37893a99440f7335e",
    "flask-testing @ git+https://github.com/jarus/flask-testing.git@17f19d7fee0e1e176703fc7cb04917a77913ba1a",
    "black==24.4.2",
    "flake8==4.0.1",
    "boto3-stubs==1.14.9.0",
    "fakeredis==1.6.1",
    "freezegun==0.3.12",
    "httmock==1.4.0",
    "ipdb",
    "ipython",
    "mock==3.0.5",
    "mypy==1.3.0",
    "moto==4.2.5",
    "parameterized==0.9.0",
    "pre-commit==2.20.0",
    "pytest",
    "pytest-cov",
    "pytest-flask",
    "pytest-grpc",
    "pytest-runner",
    "pytest-timeout",
    "pytest-xdist",
    "python-coveralls",
    "pytest-sugar",
    "sqlalchemy-stubs==0.3",
    "termcolor==2.3.0",
    "tqdm",
    "types-boto==2.49.18.9",
    "types-cachetools==4.2.10",
    "types-cryptography==3.3.23.2",
    "types-deprecated==1.2.9.3",
    "types-beautifulsoup4==4.12.0.6",
    "types-docutils==0.20.0.3",
    "types-enum34==1.1.8",
    "types-freezegun==1.1.10",
    "types-futures==3.3.1",
    "types-geoip2==3.0.0",
    "types-html5lib==1.1.11.15",
    "types-ipaddress==1.0.8",
    "types-jsonschema==4.17.0.8",
    "types-maxminddb==1.5.0",
    "types-mock==5.1.0.2",
    "types-protobuf==3.18.0",
    "types-psutil==5.9.5.13",
    "types-pyopenssl==20.0.9",
    "types-python-dateutil==2.8.19.14",
    "types-pytz==2023.3.1.1",
    "types-pyyaml==5.4.12",
    "types-redis==3.5.14",
    "types-requests==2.25.11",
    "types-setuptools==68.2.0.0",
    "types-six==1.16.21.20240513",
    "types-stripe==3.5.2.14",
    "types-termcolor==1.1.2",
    "types-toposort==1.10.0.1",
    "types-tzlocal==5.1.0.1",
]

[project.optional-dependencies]
library = [
    "alembic",
    "authlib",
    "bitmath",
    "boto3",
    "bcrypt",
    "botocore",
    "cachetools",
    "cryptography",
    "deprecated",
    "elasticsearch",
    "flask",
    "hashids",
    "jsonschema",
    "keystoneauth1",
    "peewee",
    "pymemcache",
    "pyyaml",
    "redis",
    "rehash",
    "sqlalchemy",
    "stripe",
    "tldextract",
    "toposort",
    "tzlocal",
    "beautifulsoup4",
    "bintrees",
    "geoip2",
    "gevent",
    "greenlet",
    "gunicorn",
    "jinja2",
    "mixpanel",
    "netaddr",
    "psutil",
    "pyjwt",
    "pyopenssl",
    "sentry-sdk",
    "requests",
    "werkzeug",
    "xhtml2pdf",
]

[tool.setuptools.packages.find]
include = [
    "features",
    "auth",
    "data",
    "data.cache",
    "data.logs_model",
    "data.logs_model.logs_producer",
    "data.model",
    "data.model.oci",
    "data.registry_model",
    "data.secscan_model",
    "util",
    "util.metrics",
    "util.migrate",
    "util.secscan",
    "util.secscan.v4",
    "util.security",
    "image",
    "image.docker",
    "image.oci",
    "image.docker.schema2",
    "image.shared",
    "digest",
    "oauth",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pylint.messages_control]
disable = "missing-docstring,invalid-name,too-many-locals,too-few-public-methods,too-many-lines"

[tool.pylint.typecheck]
ignored-modules = "features,greenlet"
generated-members = "REQUEST,acl_users,aq_parent,DoesNotExist,id,can"

[tool.isort]
known_local_folder = "auth,avatars,buildman,buildtrigger,data,digest,endpoints,features,health,image,notifications,oauth,proxy,storage,test,tools,util,workers,_init,active_migration,app,config,external_libraries,initdb,path_converters,release"
profile = "black"

[tool.pylint.format]
max-line-length = 100

[tool.pyright]
stubPath = 'mypy_stubs'

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ['test/**', 'venv/**', '**/test/**']

[tool.uv]
